@@ -26,13 +26,73 @@ Optional URI to associate with the project. If present, the URI will be
 written to the project plan and used for added uniqueness in hashed object
 IDs.
 
+=item C<--deploy-dir>
+
+  sqitch --deploy-dir db/up
+
+Path to a directory containing deploy scripts. Overrides the value implied by
+C<--top-dir>.
+
+=item C<--revert-dir>
+
+  sqitch --revert-dir db/down
+
+Path to a directory containing revert scripts. Overrides the value implied by
+C<--top-dir>.
+
+=item C<--verify-dir>
+
+  sqitch --verify-dir db/t
+
+Path to a directory containing verify scripts. Overrides the value implied by
+C<--top-dir>.
+
+=item C<--reworked-dir>
+
+  sqitch --reworked-dir db/prev
+
+Path to a directory containing reworked scripts. Overrides the value implied by
+the core Sqitch C<--top-dir> option.
+
+=item C<--reworked-deploy-dir>
+
+  sqitch --reworked-deploy-dir db/prev/up
+
+Path to a directory containing reworked deploy scripts. Overrides the value
+implied by C<--reworked-dir>.
+
+=item C<--reworked-revert-dir>
+
+  sqitch --reworked-revert-dir db/prev/down
+
+Path to a directory containing rewroekd revert scripts. Overrides the value
+implied by C<--reworked-dir>.
+
+=item C<--reworked-verify-dir>
+
+  sqitch --reworked-verify-dir db/prev/t
+
+Path to a directory containing reworked verify scripts. Overrides the value
+implied by C<--reworked-dir>.
+
+=item C<--extension>
+
+  sqitch --extension ddl
+
+The file name extension on deploy, revert, and verify scripts. Defaults to
+C<sql>.
+
 =back
 
 =head1 Configuration
 
 The most important thing C<sqitch init> does is create the project plan file,
-F<sqitch.conf>. While the C<init> command has no options of its own, it relies
-on several of the options to C<sqitch> to determine what to write to this file:
+F<sqitch.conf>. A few core Sqitch and C<init>-specific options determine what
+gets written to the file:
+
+=over
+
+=item Sqitch Options
 
 =over
 
@@ -45,22 +105,6 @@ Sets the C<core.plan_file> configuration variable.
 Determines the top-level directory to use when writing the plan and
 theC<core.deploy_dir>, C<core.revert_dir>, and C<core.verify_dir> variables --
 unless they are overridden by their more-specific options, detailed below.
-
-=item C<--deploy-dir>
-
-Sets the C<core.deploy_dir> configuration variable.
-
-=item C<--revert-dir>
-
-Sets the C<core.revert_dir> configuration variable.
-
-=item C<--verify-dir>
-
-Sets the C<core.verify_dir> configuration variable.
-
-=item C<--extension>
-
-Sets the C<core.extension> configuration variable.
 
 =item C<--engine>
 
@@ -78,12 +122,52 @@ passed.
 
 =back
 
-As a general rule, you likely won't need any of them except for C<--engine>,
-since many commands need to know what engine to use, and specifying it on the
-command-line forever after would be annoying.
+=item Init Options
+
+=over
+
+=item C<--deploy-dir>
+
+Sets the C<core.deploy_dir> configuration variable.
+
+=item C<--revert-dir>
+
+Sets the C<core.revert_dir> configuration variable.
+
+=item C<--verify-dir>
+
+Sets the C<core.verify_dir> configuration variable.
+
+=item C<--reworked-dir>
+
+Sets the C<core.reworked_dir> configuration variable.
+
+=item C<--reworked-deploy-dir>
+
+Sets the C<core.reworked_deploy_dir> configuration variable.
+
+=item C<--reworked-revert-dir>
+
+Sets the C<core.reworked_revert_dir> configuration variable.
+
+=item C<--reworked-verify-dir>
+
+Sets the C<core.reworked_verify_dir> configuration variable.
+
+=item C<--extension>
+
+Sets the C<core.extension> configuration variable.
+
+=back
+
+=back
+
+As a general rule, you likely won't need any of these options except for
+C<--engine>, since many commands need to know what engine to use, and
+specifying it on the command-line forever after would be annoying.
 
 These variables will only be written if their corresponding options are
-specified. Otherwise, they get written as comments with user or system
+specified. Otherwise, core options get written as comments with user or system
 configuration settings, or, failing any values from those locations, from
 their default values. If no defaults are specified, they will still be
 written, commented out, with a bar C<=> and no value. This allows one to know
@@ -100,10 +184,10 @@ Start a new Sqitch project using the PostgreSQL engine, setting the top
 directory to F<postgres>, a script extension of C<ddl>, and a version-specific
 client:
 
-  sqitch --engine    pg \
-         --top-dir   postgres \
-         --extension ddl \
-         --client    /opt/pgsql-9.1/bin/psql init
+  sqitch --engine  pg \
+         --top-dir postgres \
+         --client  /opt/pgsql-9.1/bin/psql \
+         init --extension ddl \
 
 =head1 Sqitch
 
