@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use 5.010;
 use utf8;
-use Test::More tests => 170;
+use Test::More tests => 183;
 #use Test::More 'no_plan';
 use App::Sqitch;
 use Locale::TextDomain qw(App-Sqitch);
@@ -44,24 +44,61 @@ $ENV{SQITCH_SYSTEM_CONFIG} = 'nonexistent.sys';
 ##############################################################################
 # Test options and configuration.
 my $sqitch = App::Sqitch->new(
-    options => {
-        top_dir      => dir('init.mkdir')->stringify,
-        reworked_dir => dir('init.mkdir/reworked')->stringify,
-    },
+    options => { top_dir => dir('init.mkdir')->stringify },
 );
-isa_ok my $init = $CLASS->new( sqitch => $sqitch ), $CLASS, 'New init object';
 
-can_ok $init, qw(uri options configure);
+isa_ok my $init = $CLASS->new(
+    sqitch       => $sqitch,
+    reworked_dir => dir('init.mkdir/reworked'),
+), $CLASS, 'New init object';
+
+can_ok $init, qw(
+    uri
+    deploy_dir
+    revert_dir
+    verify_dir
+    reworked_dir
+    reworked_deploy_dir
+    reworked_revert_dir
+    reworked_verify_dir
+    extension
+    options
+    configure
+);
 is_deeply [$init->options], [qw(
     uri=s
+    deploy-dir=s
+    revert-dir=s
+    verify-dir=s
+    reworked-dir=s
+    reworked-deploy-dir=s
+    reworked-revert-dir=s
+    reworked-verify-dir=s
+    extension=s
 )], 'Options should be correct';
 
 is_deeply $CLASS->configure({}, {}), {}, 'Default config should be empty';
 is_deeply $CLASS->configure({}, { uri => 'http://example.com' }),
     { uri => URI->new('http://example.com') },
     'Should accept a URI in options';
-isa_ok $CLASS->configure({}, { uri => 'http://example.com' })->{uri}, 'URI',
-    'processed uri option';
+ok my $config = $CLASS->configure({}, {
+    uri                 => 'http://example.com',
+    deploy_dir          => 'dep',
+    revert_dir          => 'rev',
+    verify_dir          => 'ver',
+    reworked_dir        => 'wrk',
+    reworked_deploy_dir => 'rdep',
+    reworked_revert_dir => 'rrev',
+    reworked_verify_dir => 'rver',
+    extension           => 'ddl',
+}), 'Get full config';
+
+isa_ok $config->{uri}, 'URI',
+isa_ok $config->{$_}, 'Path::Class::Dir', "$_ attribute" for map {
+    ("$_\_dir", "reworked_$_\_dir")
+} qw(deploy revert verify);
+is $config->{extension}, 'ddl', 'Should have extension';
+
 isa_ok my $target = $init->default_target, 'App::Sqitch::Target', 'default target';
 
 ##############################################################################
@@ -81,8 +118,14 @@ for my $attr (map { "$_\_dir"} qw(top deploy revert verify)) {
 }
 my $sep = dir('')->stringify;
 is_deeply +MockOutput->get_info, [
-    map { [__x "Created {file}", file => $target->$_ . $sep] }
-    map { ("$_\_dir", "reworked_$_\_dir") } qw(deploy revert verify)
+    map {
+        my $attr = "$_\_dir";
+        my $rwrk = "reworked_$_\_dir";
+        (
+            [__x "Created {file}", file => $target->$attr . $sep],
+            [__x "Created {file}", file => $init->$rwrk . $sep]
+        )
+    } qw(deploy revert verify)
 ], 'Each should have been sent to info';
 
 # Do it again.
@@ -156,13 +199,12 @@ file_contents_like $conf_file, qr{\Q[core]
 	# engine = 
 	# plan_file = $plan_file
 	# top_dir = $top_dir
-	# extension = sql
 }m, 'All in core section should be commented-out';
 unlink $conf_file;
 
 # Set two options.
-$sqitch = App::Sqitch->new(options => { extension => 'foo' });
-ok $init = $CLASS->new( sqitch => $sqitch ), 'Another init object';
+$sqitch = App::Sqitch->new;
+ok $init = $CLASS->new( sqitch => $sqitch,  extension => 'foo' ), 'Another init object';
 $target = $init->default_target;
 ok $init->write_config, 'Write the config';
 file_exists_ok $conf_file;
@@ -191,8 +233,8 @@ USERCONF: {
     # Delete the file and write with a user config loaded.
     unlink $conf_file;
     local $ENV{SQITCH_USER_CONFIG} = file +File::Spec->updir, 'user.conf';
-    my $sqitch = App::Sqitch->new(options => { extension => 'foo' });
-    ok my $init = $CLASS->new( sqitch => $sqitch),
+    my $sqitch = App::Sqitch->new;
+    ok my $init = $CLASS->new( sqitch => $sqitch, extension => 'foo'),
         'Make an init object with user config';
     file_not_exists_ok $conf_file;
     ok $init->write_config, 'Write the config with a user conf';
@@ -214,8 +256,8 @@ SYSTEMCONF: {
     # Delete the file and write with a system config loaded.
     unlink $conf_file;
     local $ENV{SQITCH_SYSTEM_CONFIG} = file +File::Spec->updir, 'sqitch.conf';
-    my $sqitch = App::Sqitch->new(options => { extension => 'foo' });
-    ok my $init = $CLASS->new( sqitch => $sqitch),
+    my $sqitch = App::Sqitch->new;
+    ok my $init = $CLASS->new( sqitch => $sqitch, extension => 'foo' ),
         'Make an init object with system config';
     ok $target = $init->default_target, 'Get target';
     file_not_exists_ok $conf_file;
@@ -241,20 +283,22 @@ SYSTEMCONF: {
 unlink $conf_file;
 $sqitch = App::Sqitch->new(
     options => {
-        plan_file           => 'my.plan',
-        deploy_dir          => dir('dep')->stringify,
-        revert_dir          => dir('rev')->stringify,
-        verify_dir          => dir('tst')->stringify,
-        reworked_deploy_dir => dir('rdep')->stringify,
-        reworked_revert_dir => dir('rrev')->stringify,
-        reworked_verify_dir => dir('rtst')->stringify,
-        extension           => 'ddl',
-        engine              => 'sqlite',
+        plan_file => 'my.plan',
+        engine    => 'sqlite',
     },
 );
 
-ok $init = $CLASS->new( sqitch  => $sqitch ),
-    'Create new init with sqitch non-default attributes';
+ok $init = $CLASS->new(
+    sqitch              => $sqitch,
+    deploy_dir          => dir('dep'),
+    revert_dir          => dir('rev'),
+    verify_dir          => dir('tst'),
+    reworked_deploy_dir => dir('rdep'),
+    reworked_revert_dir => dir('rrev'),
+    reworked_verify_dir => dir('rtst'),
+    extension           => 'ddl',
+), 'Create new init with sqitch non-default attributes';
+
 ok $init->write_config, 'Write the config with core attrs';
 is_deeply +MockOutput->get_info, [
     [__x 'Created {file}', file => $conf_file]
